# docker_fastapi_poetry

./: .dockerignore  .gitignore  Dockerfile  README.md  README_OLD.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
app/: __init__.py  main.py
docs/concepts/: curl-basics.md  docker-basics.md  http-methods.md  http-status-codes.md  ports-networking.md  rest-apis.md
docs/guides/: docker-hub.md  getting-started.md  github-actions.md
docs/tutorials/: first-api.md  first-endpoint.md
tests/: __init__.py  test_main.py
